objects/EUR_CRM_Product_Discount_EU__c.object
<CustomObject>
    <description>Join table used by Sales Orders to apply discounts to products</description>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipLabel>Product Discounts (EU)</relationshipLabel>
        <relationshipName>Product_Discounts_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Discount_Value_Amt_9L_Case__c</fullName>
        <description>Currency amount per 9L case</description>
        <label>Discount Value Amt (9L Case)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Classification__c</fullName>
        <label>Outlet Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesalers</fullName>
                </value>
                <value>
                    <fullName>Counter service</fullName>
                </value>
                <value>
                    <fullName>Specialist Group</fullName>
                </value>
                <value>
                    <fullName>Specialist Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Discount (EU)</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>Product Discount No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Discounts (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_ZA_OFF_Direct_SO_Discount</fullName>
        <active>true</active>
        <label>EUR ZA OFF Direct SO Discount</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>